# brickOS

./: README.md
CVSROOT/: modules
LNPD/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.ac  dllx.README  index.php  lnpd.static
LNPD/dllx/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  lnpdllx.1  loader2.c  lx.c
LNPD/inst-pieces/: mkinstalldirs
LNPD/lnpd+liblnp/: .cvsignore  Makefile  Makefile.am  Makefile.in  README
LNPD/lnpd+liblnp/applications/: .cvsignore  Makefile  Makefile.am  Makefile.in  lnpdll.1  lnptest.1  lnptest.c  lnptest2.1  lnptest2.c  loader.c  lx.c  lx.h
LNPD/lnpd+liblnp/liblnp/: .cvsignore  Makefile  Makefile.am  Makefile.in  liblnp.h  lnptest.c  stub.c
LNPD/lnpd+liblnp/lnpd/: .cvsignore  Makefile  Makefile.am  Makefile.in  daemon.c  daemon.h  lnp.c  lnp.h  lnpd.8  logger.c  logger.h  main.c  rcxtty.c  rcxtty.h  tcp.c  transceiver.c  transceiver.h
LNPD/lnpd+liblnp/rcx/: .depend  Makefile.am  Makefile.in  legOS.patch  lnptest.c  lnptest2.c
brickos/: NOTES
brickos-web/: .cvsignore  Makefile  about.htm  development.htm  documents.htm  download.htm  index.html  links.htm  rptrvwbugs.htm
brickos-web/docs/: CommandRef.html  INSTALL-cygwin.html  install-DJGPP.html  install-Debian.html
brickos-web/release/: effort.htm  index.html  install-rfc.htm
brickos-web/testing/: index.htm  index.html
brickos/doc/: index.html
brickos/lib/float/: fixsfsi.s
notes/: prep-lnpd-release.txt  prep-release.txt
