# Makefile - keep the upper hand.

bin_PROGRAMS = lnpd

lnpd_SOURCES = daemon.c \
               lnp.c \
               logger.c \
               main.c \
               rcxtty.c \
               tcp.c \
               transceiver.c

noinst_HEADERS = daemon.h \
                 lnp.h \
                 logger.h \
                 rcxtty.h \
                 transceiver.h

man_MANS = lnpd.8
