# Makefile - keep the upper hand.

sbin_PROGRAMS = lnpd

lnpd_SOURCES = daemon.c daemon.h \
               lnp.c lnp.h \
               logger.c logger.h \
               main.c \
               rcxtty.c rcxtty.h \
               tcp.c \
               transceiver.c transceiver.h

man_MANS = lnpd.8

EXTRA_DIST = lnpd.8
